force-app/main/default/objects/SDG_Outcome_Measure__c/SDG_Outcome_Measure__c.object-meta.xml
<CustomObject>
    <description>Measures related to a specific outcome</description>
    <label>SDG Outcome Measure</label>
    <nameField>
        <displayFormat>SDG-M-{000000}</displayFormat>
        <label>Measure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDG Outcome Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>