force-app/main/default/objects/SDG_Outcome_Measure__c/fields/Delivered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Actual delivered quantity</description>
    <inlineHelpText>The amount which was actually delivered for this measure. For example if the target was 100 meals and 90 were delivered, then this would be set to 90.</inlineHelpText>
    <label>Delivered Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>