force-app/main/default/objects/SDG_Outcome_Measure__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <description>Name of the measurement unit</description>
    <inlineHelpText>Provide the name of the measure. For example if you are measuring 100 meals to be provided, then this would be &quot;Meals&quot;</inlineHelpText>
    <label>Measure</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>