force-app/main/default/objects/SDG_Outcome_Measure__c/fields/SDG_Outcome__c.field-meta.xml
<CustomField>
    <fullName>SDG_Outcome__c</fullName>
    <description>Parent SDG Outcome</description>
    <inlineHelpText>Select the SDG Outcome this measure belongs to.</inlineHelpText>
    <label>SDG Outcome</label>
    <referenceTo>SDG_Outcome__c</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>SDG_Outcome_Measures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>