force-app/main/default/objects/SDG_Outcome_Measure__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;On Track&quot;</defaultValue>
    <description>Current progress status of the measure</description>
    <inlineHelpText>The status of the current measure.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Exceeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>