force-app/main/default/objects/SDG_Outcome_Measure__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Target quantity to achieve</description>
    <inlineHelpText>The target amount for the measure. For example 100 meals.</inlineHelpText>
    <label>Target Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>