force-app/main/default/objects/SDG_Outcome_Measure__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Expected completion date</description>
    <inlineHelpText>The expected completed date for this measure.</inlineHelpText>
    <label>Target Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>